@@ -3,17 +3,12 @@ package org.salgar.fsm.akka.foureyes.creditsm;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
-import org.salgar.akka.fsm.foureyes.addresscheck.AddressCheckService;
-import org.salgar.akka.fsm.foureyes.creditscore.CreditScoreService;
-import org.salgar.akka.fsm.foureyes.faudprevention.FraudPreventionService;
 import org.salgar.akka.fsm.foureyes.notifier.NotifierService;
 import org.salgar.fsm.akka.foureyes.credit.CreditSM;
 import org.salgar.fsm.akka.foureyes.credit.facade.CreditSMFacade;
-import org.salgar.fsm.akka.foureyes.credit.model.Address;
-import org.salgar.fsm.akka.foureyes.credit.model.Customer;
+import org.salgar.fsm.akka.foureyes.credit.model.*;
 import org.salgar.fsm.akka.foureyes.creditscore.facade.CreditScoreSMFacade;
 import org.salgar.fsm.akka.foureyes.elasticsearch.CreditSMRepository;
 import org.salgar.fsm.akka.foureyes.elasticsearch.model.CreditSmEs;
@@ -44,7 +39,6 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 import static org.salgar.akka.fsm.foureyes.notifier.NotificationHelper.*;
 
-@Disabled
 @EnableElasticsearchRepositories("org.salgar.fsm.akka.foureyes.elasticsearch")
 @ActiveProfiles({"itest"})
 @DirtiesContext(classMode = DirtiesContext.ClassMode.AFTER_CLASS)
@@ -58,8 +52,9 @@ import static org.salgar.akka.fsm.foureyes.notifier.NotificationHelper.*;
 public class RecoveryPostTest {
     final List<String> relationShipNotificationList = Arrays.asList("relationshipmanager1@example.com", "relationshipmanager2@example.com");
     final List<String> salesManagerNotificationList = Arrays.asList("salesmanager1@example.com", "salesmanager2@example.com");
-    final List<String> creditAnalystNotificationList = Arrays.asList("creditanalyst@example.com");
-    final List<String> seniorSalesManagerNotificationList = Arrays.asList("seniorSalesManagert@example.com");
+    final List<String> creditAnalystNotificationList = List.of("creditanalyst@example.com");
+    final List<String> seniorSalesManagerNotificationList = List.of("seniorSalesManagert@example.com");
+    final List<String> someOtherManagerNotificationList = List.of("someOtherManager@example.com");
     private final static long WAIT_TIME_BETWEEN_STEPS = TimeUnit.MILLISECONDS.toMillis(2000);
     private final static long WAIT_TIME_ELASTIC = TimeUnit.SECONDS.toMillis(10);
 
@@ -68,15 +63,6 @@ public class RecoveryPostTest {
 
     @Autowired
     private CreditSMRepository creditSMRepository;
-
-    @MockBean
-    private CreditScoreService creditScoreServiceMockBean;
-
-    @MockBean
-    private FraudPreventionService fraudPreventionServiceMockBean;
-
-    @MockBean
-    private AddressCheckService addressCheckServiceMockBean;
 
     @MockBean
     private NotifierService notifierService;
@@ -94,32 +80,10 @@ public class RecoveryPostTest {
     public void recoveryTest() {
         final String creditUuid = "0e679b7f-806f-41db-bd8e-21f3f62aa3e3_"
                 + DateTimeFormatter.ofPattern("dd_MM_yyyy").format(LocalDate.now());
-        final Customer customer1 =
-                new Customer(
-                        "John",
-                        "Doe",
-                        "123456789X",
-                        new Address(
-                                "muster strasse 1",
-                                "11A",
-                                "city1",
-                                "country1"
-                        ),
-                        "customer1@test.info");
-        final Customer customer2 =
-                new Customer(
-                        "Max",
-                        "Musterman",
-                        "Z987654321",
-                        new Address(
-                                "muster strasse 1",
-                                "11A",
-                                "city1",
-                                "country1"
-                        ),
-                        "customer2@test.info");
+        final CustomerV2 customer1 = prepareCustomer1V2();
+        final CustomerV2 customer2 = prepareCustomer2V2();
 
-        List<Customer> creditTenants = new ArrayList<>();
+        List<CustomerV2> creditTenants = new ArrayList<>();
         creditTenants.add(customer1);
         creditTenants.add(customer2);
 
@@ -135,13 +99,13 @@ public class RecoveryPostTest {
 
         Thread.sleep(WAIT_TIME_BETWEEN_STEPS);
 
-        for (Customer customer : creditTenants) {
+        for (CustomerV2 customer : creditTenants) {
             log.info("Sending Credit Score Result for Customer: {}", customer);
 
             Map<String, Object> creditScorePayload = new HashMap<>();
             creditScorePayload.put(PayloadVariableConstants.CREDIT_SCORE_RESULT, 97.45);
             creditScoreSMFacade.resultReceived(
-                    () -> creditUuid + "_" + customer.getPersonalId(),
+                    () -> creditUuid + "_" + customer.getCustomerId(),
                     creditScorePayload);
         }
 
@@ -159,11 +123,7 @@ public class RecoveryPostTest {
                                 CreditSM
                                         .CREDIT_APPLICATION_SUBMITTED_$_WAITING_CREDIT_ANALYST_APPROVAL
                                         .class
-                                        .getSimpleName().indexOf("_$_") + 3,
-                                CreditSM
-                                        .CREDIT_APPLICATION_SUBMITTED_$_WAITING_CREDIT_ANALYST_APPROVAL
-                                        .class
-                                        .getSimpleName().length()
+                                        .getSimpleName().indexOf("_$_") + 3
                         ),
                 creditSmEs.get().getState()
         );
@@ -179,32 +139,10 @@ public class RecoveryPostTest {
     public void recoveryOnlyOneCreditScoreEventReceivedTest() {
         final String creditUuid = "0e679b7f-806f-41db-bd8e-21f3f62aa3e4_"
                 + DateTimeFormatter.ofPattern("dd_MM_yyyy").format(LocalDate.now());
-        final Customer customer1 =
-                new Customer(
-                        "John",
-                        "Doe",
-                        "123456789X",
-                        new Address(
-                                "muster strasse 1",
-                                "11A",
-                                "city1",
-                                "country1"
-                        ),
-                        "customer1@test.info");
-        final Customer customer2 =
-                new Customer(
-                        "Max",
-                        "Musterman",
-                        "Z987654321",
-                        new Address(
-                                "muster strasse 1",
-                                "11A",
-                                "city1",
-                                "country1"
-                        ),
-                        "customer2@test.info");
+        final CustomerV2 customer1 = prepareCustomer1V2();
+        final CustomerV2 customer2 = prepareCustomer2V2();
 
-        List<Customer> creditTenants = new ArrayList<>();
+        List<CustomerV2> creditTenants = new ArrayList<>();
         creditTenants.add(customer1);
         creditTenants.add(customer2);
 
@@ -223,13 +161,13 @@ public class RecoveryPostTest {
 
         Thread.sleep(WAIT_TIME_BETWEEN_STEPS);
 
-        Customer customer =  creditTenants.get(0);
+        CustomerV2 customer =  creditTenants.get(0);
         log.info("Sending Credit Score Result for Customer: {}", customer);
 
         Map<String, Object> creditScorePayload = new HashMap<>();
         creditScorePayload.put(PayloadVariableConstants.CREDIT_SCORE_RESULT, 83.45);
         creditScoreSMFacade.resultReceived(
-                () -> creditUuid + "_" + customer.getPersonalId(),
+                () -> creditUuid + "_" + customer.getCustomerId(),
                 creditScorePayload);
 
 
@@ -246,11 +184,7 @@ public class RecoveryPostTest {
                                 CreditSM
                                         .CREDIT_APPLICATION_SUBMITTED_$_WAITING_CREDIT_ANALYST_APPROVAL
                                         .class
-                                        .getSimpleName().indexOf("_$_") + 3,
-                                CreditSM
-                                        .CREDIT_APPLICATION_SUBMITTED_$_WAITING_CREDIT_ANALYST_APPROVAL
-                                        .class
-                                        .getSimpleName().length()
+                                        .getSimpleName().indexOf("_$_") + 3
                         ),
                 creditSmEs.get().getState()
         );
@@ -261,9 +195,99 @@ public class RecoveryPostTest {
         Thread.sleep(WAIT_TIME_ELASTIC);
     }
 
+    private CustomerV2 prepareCustomer1V2() {
+        IdentificationInformation identificationInformation =
+                new IdentificationInformation(
+                        "123456789X",
+                        "PASS"
+                );
+        IncomeProof incomeProof =
+                new IncomeProof(
+                        UUID.randomUUID().toString(),
+                        "ABC",
+                        "99999.99"
+                );
+        FixExpanse expanseRent =
+                new FixExpanse(
+                        UUID.randomUUID().toString(),
+                        "1500",
+                        "Rent"
+                );
+        FixExpanse expanseCarCredit =
+                new FixExpanse(
+                        UUID.randomUUID().toString(),
+                        "600",
+                        "Credit"
+                );
+
+        return new CustomerV2(
+                UUID.randomUUID().toString(),
+                "John",
+                "Doe",
+                List.of(identificationInformation),
+                List.of(incomeProof),
+                Arrays.asList(expanseRent, expanseCarCredit),
+                List.of(new Address(
+                        "muster strasse 1",
+                        "11A",
+                        "city1",
+                        "country1"
+                )),
+                "customer1@test.org"
+        );
+    }
+
+    private CustomerV2 prepareCustomer2V2() {
+        new Customer(
+                "Max",
+                "Musterman",
+                "Z987654321",
+                new Address(
+                        "muster strasse 1",
+                        "11A",
+                        "city1",
+                        "country1"
+                ),
+                "customer1@test.info");
+        IdentificationInformation identificationInformation =
+                new IdentificationInformation(
+                        "Z987654321",
+                        "PERSO"
+                );
+        IncomeProof incomeProof =
+                new IncomeProof(
+                        UUID.randomUUID().toString(),
+                        "ZXY",
+                        "1111.11"
+                );
+        FixExpanse expanseCarCredit =
+                new FixExpanse(
+                        UUID.randomUUID().toString(),
+                        "900",
+                        "Credit"
+                );
+
+
+        return new CustomerV2(
+                UUID.randomUUID().toString(),
+                "Max",
+                "Musterman",
+                List.of(identificationInformation),
+                List.of(incomeProof),
+                List.of(expanseCarCredit),
+                List.of(new Address(
+                        "muster strasse 1",
+                        "11A",
+                        "city1",
+                        "country1"
+                )),
+                "customer1@test.org"
+        );
+    }
+
     private Map<String, Object> preparePayload (
             String creditUuid,
-            List<Customer> creditTenants) {
+            List<CustomerV2> creditTenants) {
 
         final Map<String, Object> payload = new HashMap<>();
         payload.put(CreditUseCaseKeyStrategy.CREDIT_UUID, creditUuid);
@@ -283,6 +307,8 @@ public class RecoveryPostTest {
                         return creditAnalystNotificationList;
                     } else if(SENIOR_SALES_MANAGER_NOTIFICATION_LIST.equals(invocation.getArgument(0))) {
                         return seniorSalesManagerNotificationList;
+                    } else if(SOME_OTHER_MANAGER_NOTIFICATION_LIST.equals(invocation.getArgument(0))) {
+                        return someOtherManagerNotificationList;
                     }
                     return null;
                 }
